# NeuralSearch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
src/: config.py  database.py  main.py  models.py  neural.py  schemas.py  tasks.py  ui.py  worker.py
src/static/: index.html
tests/: test_main.py  test_neural.py
